improve the generator function